--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/LoginRegisterTheme"
-    tools:context=".ui.loginregister.RegisterActivity">
+    android:foregroundTint="@color/toms_700"
+    tools:context=".ui.loginregister.ForgotPasswordActivity">
 
     <ScrollView
-        android:id="@+id/registrationView"
+        android:id="@+id/forgotPasswordView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,23 +23,24 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/logoImageView"
-                android:layout_width="73dp"
-                android:layout_height="93dp"
+                android:id="@+id/logoForgotPassword"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginTop="32dp"
                 app:srcCompat="@drawable/logo_splash_screen" />
 
             <TextView
-                android:id="@+id/appNameTextView"
+                android:id="@+id/appNameForgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="@string/app_name"
-                android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textAlignment="center"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/registerEmail"
+                android:id="@+id/emailAddress"
                 android:layout_width="270dp"
                 android:layout_height="48dp"
                 android:layout_marginTop="32dp"
@@ -47,62 +48,24 @@
                 android:hint="@string/email"
                 android:inputType="textEmailAddress" />
 
-            <EditText
-                android:id="@+id/registerName"
-                android:layout_width="270dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="16dp"
-                android:ems="10"
-                android:hint="Name"
-                android:inputType="textPersonName" />
-
-            <EditText
-                android:id="@+id/registerPassword"
-                android:layout_width="270dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="16dp"
-                android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword" />
-
             <Button
-                android:id="@+id/registerBirthDate"
-                style="?android:spinnerStyle"
+                android:id="@+id/sendEmailButton"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="270dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="16dp"
-                android:ems="10"
-                android:hint="@string/birth_date"
-                android:onClick="openDatePicker"
-                android:textAlignment="viewStart"
-                android:textColor="@color/black"
-                android:textColorHighlight="@color/toms_200"
-                android:textColorLink="@color/toms_400" />
-
-            <Spinner
-                android:id="@+id/registerGender"
-                android:layout_width="270dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="16dp"
-                android:entries="@array/genders"
-                android:spinnerMode="dialog"
-                android:theme="@style/LoginRegisterTheme" />
-
-            <Button
-                android:id="@+id/registerButton"
-                android:layout_width="270dp"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:onClick="registerUser"
-                android:text="@string/register"
+                android:background="@color/toms_400"
+                android:text="@string/send_email"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
     </ScrollView>
 
     <ProgressBar
-        android:id="@+id/registerProgressBar"
+        android:id="@+id/sendingProgressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -115,18 +78,17 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/registrationProgressText"
+        android:id="@+id/sendingProgressText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/registration_in_progress"
+        android:text="@string/email_sending_in_progress"
         android:textSize="16sp"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/forgotPasswordView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/forgotPasswordView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.41000003"
+        app:layout_constraintVertical_bias="0.42000002"
         tools:visibility="visible" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
