--- a/app/src/main/res/layout/fragment_add_custom_activity.xml
+++ b/app/src/main/res/layout/fragment_add_custom_activity.xml
@@ -20,14 +20,17 @@
                 android:id="@+id/activityNameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activity_name" />
+                android:text="@string/activity_name"
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/activityNameTextHelper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16px"
-                android:text="@string/add_custom_name" />
+                android:paddingTop="4dp"
+                android:text="@string/add_custom_name"
+                android:textSize="12sp"
+                android:textStyle="italic" />
 
             <RadioGroup
                 android:id="@+id/selectActivityNameRadioGroup"
@@ -39,12 +42,14 @@
                     android:id="@+id/selectFixActivityOption"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/fix_activities" />
 
                 <RadioButton
                     android:id="@+id/selectCustomActivityOption"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/custom_activity" />
             </RadioGroup>
 
@@ -73,8 +78,10 @@
                 android:id="@+id/activityColorText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:text="@string/color" />
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/color"
+                android:textStyle="bold" />
 
             <ImageButton
                 android:id="@+id/activityColor"
@@ -87,8 +94,9 @@
                 android:id="@+id/activityNoteText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:text="@string/note" />
+                android:layout_marginTop="16dp"
+                android:text="@string/note"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/activityNote"
@@ -104,8 +112,9 @@
                 android:id="@+id/activityPriorityText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:text="@string/priority" />
+                android:layout_marginTop="16dp"
+                android:text="@string/priority"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/activityPriority"
@@ -119,8 +128,9 @@
                 android:id="@+id/activityRegularityText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:text="@string/notification_type" />
+                android:layout_marginTop="16dp"
+                android:text="@string/notification_type"
+                android:textStyle="bold" />
 
             <RadioGroup
                 android:id="@+id/selectNotifTypeRadioGroup"
@@ -132,18 +142,21 @@
                     android:id="@+id/activityRegularity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/regularity" />
 
                 <RadioButton
                     android:id="@+id/activityIsInterval"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/just_interval" />
 
                 <RadioButton
                     android:id="@+id/activityCustom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/just_time_measure" />
             </RadioGroup>
 
@@ -151,10 +164,11 @@
                 android:id="@+id/startDayText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/custom_interval_from"
+                android:textStyle="bold"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
 
             <EditText
                 android:id="@+id/activityStartDay"
@@ -173,10 +187,11 @@
                 android:id="@+id/endDayText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/custom_interval_to"
+                android:textStyle="bold"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
 
             <EditText
                 android:id="@+id/activityEndDay"
@@ -195,8 +210,9 @@
                 android:id="@+id/activityRegularityTypeText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/dates_type"
+                android:textStyle="bold"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
@@ -213,18 +229,21 @@
                     android:id="@+id/activityDaily"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/daily" />
 
                 <RadioButton
                     android:id="@+id/activityWeekly"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/weekly" />
 
                 <RadioButton
                     android:id="@+id/activityMonthly"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/monthly" />
             </RadioGroup>
 
@@ -232,8 +251,8 @@
                 android:id="@+id/activityHasFixedWeeks"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
-                android:paddingTop="16dp"
                 android:text="@string/has_fixed_days"
                 android:visibility="gone"
                 tools:visibility="visible" />
@@ -242,8 +261,10 @@
                 android:id="@+id/activityWeeklyDays"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:text="@string/weekly_days"
+                android:textStyle="bold"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
@@ -259,6 +280,7 @@
                     android:id="@+id/monday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/monday"
                     android:visibility="visible" />
 
@@ -266,6 +288,7 @@
                     android:id="@+id/tuesday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/tuesday"
                     android:visibility="visible" />
 
@@ -273,6 +296,7 @@
                     android:id="@+id/wednesday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/wednesday"
                     android:visibility="visible" />
 
@@ -280,6 +304,7 @@
                     android:id="@+id/thursday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/thursday"
                     android:visibility="visible" />
 
@@ -287,6 +312,7 @@
                     android:id="@+id/friday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/friday"
                     android:visibility="visible" />
 
@@ -294,6 +320,7 @@
                     android:id="@+id/saturday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/saturday"
                     android:visibility="visible" />
 
@@ -301,6 +328,7 @@
                     android:id="@+id/sunday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/sunday"
                     android:visibility="visible" />
             </LinearLayout>
@@ -309,8 +337,8 @@
                 android:id="@+id/activityHasAnEndDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
-                android:paddingTop="16dp"
                 android:text="@string/has_an_end_date"
                 android:visibility="gone"
                 tools:visibility="visible" />
@@ -333,11 +361,11 @@
                 style="@style/Theme.TomsSchedule"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
-                android:paddingTop="16dp"
                 android:text="@string/is_time_measured"
                 android:textSize="14sp"
-                android:visibility="visible"
+                android:visibility="gone"
                 tools:visibility="visible" />
 
             <RadioGroup
@@ -352,24 +380,28 @@
                     android:id="@+id/activityIsSumTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/sum_time" />
 
                 <RadioButton
                     android:id="@+id/activityIsTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/simple_time" />
 
                 <RadioButton
                     android:id="@+id/activityCustomTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/custom_time" />
 
                 <RadioButton
                     android:id="@+id/activityIsWeeklyTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:text="@string/is_weekly_time" />
             </RadioGroup>
 
@@ -377,8 +409,9 @@
                 android:id="@+id/durationText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
+                android:layout_marginTop="16dp"
                 android:text="Duration text..."
+                android:textStyle="bold"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
@@ -394,6 +427,7 @@
                 android:id="@+id/fixedDaysTimes"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
                 android:orientation="vertical"
                 android:visibility="gone"
                 tools:visibility="visible">
@@ -402,17 +436,17 @@
                     android:id="@+id/activityFixedDayTimeEachDayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="16dp"
-                    android:text="@string/select_fixed_days_times" />
+                    android:text="@string/select_fixed_days_times"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/activityMondayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
                     android:text="@string/monday"
-                    android:textStyle="italic" />
+                    android:textStyle="bold|italic" />
 
                 <include
                     android:id="@+id/activityMondayPicker"
@@ -424,10 +458,10 @@
                     android:id="@+id/activityTuesdayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
                     android:text="@string/tuesday"
-                    android:textStyle="italic" />
+                    android:textStyle="bold|italic" />
 
                 <include
                     android:id="@+id/activityTuesdayPicker"
@@ -439,10 +473,10 @@
                     android:id="@+id/activityWednesdayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
                     android:text="@string/wednesday"
-                    android:textStyle="italic" />
+                    android:textStyle="bold|italic" />
 
                 <include
                     android:id="@+id/activityWednesdayPicker"
@@ -454,10 +488,10 @@
                     android:id="@+id/activityThursdayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
                     android:text="@string/thursday"
-                    android:textStyle="italic" />
+                    android:textStyle="bold|italic" />
 
                 <include
                     android:id="@+id/activityThursdayPicker"
@@ -469,10 +503,10 @@
                     android:id="@+id/activityFridayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
                     android:text="@string/friday"
-                    android:textStyle="italic" />
+                    android:textStyle="bold|italic" />
 
                 <include
                     android:id="@+id/activityFridayPicker"
@@ -484,10 +518,10 @@
                     android:id="@+id/activitySaturdayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
                     android:text="@string/saturday"
-                    android:textStyle="italic" />
+                    android:textStyle="bold|italic" />
 
                 <include
                     android:id="@+id/activitySaturdayPicker"
@@ -499,10 +533,10 @@
                     android:id="@+id/activitySundayText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="16dp"
                     android:text="@string/sunday"
-                    android:textStyle="italic" />
+                    android:textStyle="bold|italic" />
 
                 <include
                     android:id="@+id/activitySundayPicker"
@@ -515,6 +549,7 @@
                 android:id="@+id/saveActivity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:text="@string/save"
                 android:textAlignment="center"
                 android:textSize="16sp"
